--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "23.0.0"
 
   defaultConfig {
-    applicationId "io.saeid.materialfabloading"
+    applicationId "io.saeid.fabloadingtest"
     minSdkVersion 9
     targetSdkVersion 23
     versionCode 1
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+  compile fileTree(include: ['*.jar'], dir: 'libs')
   compile 'com.android.support:appcompat-v7:23.0.0'
   compile project(':fab-loading')
 }
