--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,15 @@
 buildscript {
   repositories {
     jcenter()
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
+      google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.2'
-    classpath 'com.novoda:bintray-release:0.3.4'
+    classpath 'com.android.tools.build:gradle:3.1.4'
+    classpath 'com.novoda:bintray-release:0.8.1'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
@@ -16,6 +21,10 @@ allprojects {
   repositories {
     jcenter()
 
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
 }
 
