--- a/fab-loading/build.gradle
+++ b/fab-loading/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.2"
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "0.6.0"
     }
@@ -20,11 +20,12 @@ android {
 }
 
 dependencies {
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'io.saeid:support-animator:0.2.1'
+    implementation 'com.melnykov:floatingactionbutton:1.3.0'
+    implementation 'io.saeid:support-animator:0.2.1'
 }
 
 publish {
+    userOrg = 'saeid'
     groupId = 'io.saeid'
     artifactId = 'fab-loading'
     publishVersion = '1.0.0'
